# pxvy

./: .gitignore  .perltidyrc  CMakeLists.txt  README.md  about.h  app.rc  build_time.h  build_time.pl  colors.h  compiler.h  context_menu.h  custom_msgbox.h  database.h  defines.h  font_picker.h  lines.py  main.c  mediainfo_c.h  mi_wrap.c  pyproject.toml  resource.h  run_semgrep.cmd  smi2srt.h  test.py  timetime.h  update_version.pl  version.h  wmmap.h
res/: Poppins.ttc  Roboto.ttc
tools/: .gitignore  build.bat  comment_block.py  merge_font.py  requirements.txt  smi_to_srt.py
